fix: spenden text align center

--- a/sass/inhalt/ansprache/_spenden.sass
+++ b/sass/inhalt/ansprache/_spenden.sass
@@ -28,10 +28,11 @@
 		+ p
 			padding-top: calc(1 / 2 * var(--padding))
 			padding-bottom: calc(3 / 4 * var(--padding))
-	div
+	.container > div
 		display: flex
 		flex-direction: column
 		align-items: center
+		text-align: center
 		+ div
 			margin-top: 2rem
 		h4
